--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <header class="cabecalho">
         <ul class="lista_cabecalho">
-            <li class="item_lista_cabecalho">Musicas</li>
-            <li class="item_lista_cabecalho">Blogs</li>
-            <li class="item_lista_cabecalho">Fivelas</li>
+            <li class="item_lista_cabecalho"><a href="index.html">Home</a> </li>
+            <li class="item_lista_cabecalho"><a href="Musicas.html">Musicas</a> </li>
+            <li class="item_lista_cabecalho"><a href="Blogs.html">Blogs</a> </li>
+            <li class="item_lista_cabecalho"><a href="Fivelas.html">Fivelas</a> </li>
         </ul>
     </header>
     <h1>Tião Carreiro</h1>
