--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
         <ul class="lista_cabecalho">
             <li class="item_lista_cabecalho"><a href="index.html">Home</a> </li>
-            <li class="item_lista_cabecalho"><a href="Musicas.html">Musicas</a> </li>
+            <li class="item_lista_cabecalho"><a href="musicas.html">Musicas</a> </li>
             <li class="item_lista_cabecalho"><a href="Blogs.html">Blogs</a> </li>
             <li class="item_lista_cabecalho"><a href="Fivelas.html">Fivelas</a> </li>
         </ul>
