--- a/musicas.html
+++ b/musicas.html
@@ -15,6 +15,9 @@
         </ul>
     </header>
      <h1>musicas</h1>
+     <img src="tiao1).jpeg" alt="">
+     <img src="tiao2.jpeg" alt="">
+     <img src="tiao3.jpeg" alt="">
     
 
 </body>
