--- a/musicas.html
+++ b/musicas.html
@@ -14,10 +14,22 @@
             <li class="item_lista_cabecalho"><a href="Fivelas.html">Fivelas</a> </li>
         </ul>
     </header>
-     <h1>musicas</h1>
+     <h1>Musicas</h1>
      <img src="tiao1).jpeg" alt="">
      <img src="tiao2.jpeg" alt="">
      <img src="tiao3.jpeg" alt="">
+     <h2>Algumas de suas Musicas
+        O Prato do Dia
+Pagode Em Brasília
+Rei do Gado
+Pagode
+Amargurado
+Boi Soberano
+A Vaca Já Foi Pro Brejo
+Chora Viola
+A Mão do Tempo
+Preto de Alma Branca
+     </h2>
     
 
 </body>
