--- a/musicas.html
+++ b/musicas.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+
 <html lang="port-br">
 <head>
     <meta charset="UTF-8">
@@ -19,16 +19,16 @@
      <img src="tiao2.jpeg" alt="">
      <img src="tiao3.jpeg" alt="">
      <h2>Algumas de suas Musicas
-        O Prato do Dia
-Pagode Em Brasília
-Rei do Gado
-Pagode
-Amargurado
-Boi Soberano
-A Vaca Já Foi Pro Brejo
-Chora Viola
-A Mão do Tempo
-Preto de Alma Branca
+        O Prato do Dia,
+Pagode Em Brasília,
+Rei do Gado,
+Pagode,
+Amargurado,
+Boi Soberano,
+A Vaca Já Foi Pro Brejo,
+Chora Viola,
+A Mão do Tempo,
+Preto de Alma Branca,
      </h2>
     
 
