--- a/Fivelas.html
+++ b/Fivelas.html
@@ -14,6 +14,12 @@
         </ul>
     </header>
      <h1>Fivelas</h1>
+     <img src="fivela1).jpeg" alt="">
+     <img src="fivela2.jpeg" alt="">
+     <img src="fivela3.jpeg" alt="">
+     <h2>
+        As fivelas de cinto são acessórios de moda essenciais para complementar o visual e adicionar um toque de estilo. 
+        Nesta categoria de Calçados, Roupas e Bolsas, existem várias marcas renomadas que oferecem uma ampla variedade de opções.</h2>
     
 
 </body>
